clusters/workshop-todo/apps/github-runner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions-runner
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-runner
  namespace: actions-runner
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: github-runner
  template:
    metadata:
      labels:
        app: github-runner
    spec:
      serviceAccountName: github-runner
      nodeSelector:
        node-role.kubernetes.io/worker: worker
      containers:
        - name: runner
          image: myoung34/github-runner:latest
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - name: work
              mountPath: /tmp/runner
            - name: buildah-cache
              mountPath: /var/lib/containers
      volumes:
        - name: work
          emptyDir: {}
        - name: buildah-cache
          emptyDir: {}
